# TextApp-Websocket

./: CMakeLists.txt  README.md  database.env  docker-compose.yaml
BackEnd/Common/: User.cpp  User.h
BackEnd/Server/Auth/JwaToken/: JwaToken.cpp
BackEnd/Server/Auth/LoginUser/: LoginUser.cpp
BackEnd/Server/Auth/PasswordHashing/: PasswordHashing.cpp
BackEnd/Server/Auth/RegisterUser/: RegiterUser.cpp
BackEnd/Server/Include/CreateNewChat/: CreateNewChat.h
BackEnd/Server/Include/DataBaseSingleton/: DataBaseSingleton.h
BackEnd/Server/Include/JwaToken/: JwaToken.h
BackEnd/Server/Include/LoadTables/: LoadTables.h
BackEnd/Server/Include/LoginUser/: LoginUser.h
BackEnd/Server/Include/PasswordHashing/: PasswordHashing.h
BackEnd/Server/Include/ReadEnvFile/: ReadEnvFile.h
BackEnd/Server/Include/RegisterUser/: RegisterUser.h
BackEnd/Server/Include/SearchForUser/: SearchForUser.h
BackEnd/Server/Include/UserProfile/ChangeUserCredentials/: ChangeUserCredentials.h
BackEnd/Server/Include/UserProfile/SaveUserImg/: SaveUserImg.h
BackEnd/Server/Src/: CMakeLists.txt  main.cpp
BackEnd/Server/Src/CreatNewChat/: CreateNewChat.cpp
BackEnd/Server/Src/DataBaseSingleton/: DataBaseSingleton.cpp
BackEnd/Server/Src/LoadTables/: LoadTables.cpp
BackEnd/Server/Src/ReadEnvFile/: ReadEnvFile.cpp
BackEnd/Server/Src/SearchForUser/: SearchForUser.cpp
BackEnd/Server/Src/UserProfile/ChangerUserCredentials/: ChangeUserCredentials.cpp
BackEnd/Server/Src/WebSocket/ClientHandeler/: ClientHandler.cpp  ClientHandler.h
BackEnd/Server/Src/WebSocket/Utils/Helpers/: EndianHelper.h
BackEnd/Server/Src/WebSocket/WebSocketServer/: ConfirmConnections.cpp  WebSocketServer.cpp  WebSocketServer.h
BackEnd/Sql/: Tables.sql
FrontEnd/Client/: CMakeLists.txt  main.cpp
FrontEnd/Client/LoginWindow/: LoginWindow.cpp  LoginWindow.h
FrontEnd/Client/MainWindow/: MainWindow.cpp  MainWindow.h
FrontEnd/Client/MainWindow/UserProfileWindow/: UserProfileWindow.cpp  UserProfileWindow.h
FrontEnd/Client/MainWindow/UserProfileWindow/ChangeDeatils/: ChangeDetails.cpp  ChangeDetails.h
FrontEnd/Client/MainWindow/UserProfileWindow/ChangeDeatils/SetUserPhoto/: SetUserPhoto.cpp  SetUserPhoto.h
FrontEnd/Client/MainWindow/UserProfileWindow/SetUserPhoto/: SetUserPhoto.cpp  SetUserPhoto.h
FrontEnd/Client/RegisterWindow/: RegisterWindow.cpp  RegisterWindow.h
